--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,13 @@
 {
   "require": {
-    "php": ">=5.3.3",
-    "phpunit/php-timer": "~1.0"
-  }
+    "php": ">=5.6.0",
+    "phpunit/php-timer": "~1.0",
+    "maximfrolov/multiexception": "dev-master"
+  },
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://github.com/maximfrolov/multiexception.git"
+    }
+  ]
 }
