--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "require": {
     "php": ">=5.6.0",
     "phpunit/php-timer": "~1.0",
+    "twig/twig": "1.*",
     "maximfrolov/multiexception": "dev-master"
   },
   "repositories": [
